--- a/CDISCOUNT/index.html
+++ b/CDISCOUNT/index.html
@@ -11,7 +11,13 @@
 <body>
   <div id="root"></div>
   <script type="module" src="./src/main.jsx"></script>
-<script src="http://localhost:3000/sdk.js" data-id="00f7de5a-9165-41b1-bf09-d3d93d8c53f7"></script>
+
+<script 
+  src="https://airslide.app/airbot/loader.js" 
+  data-id="demo-site-001">
+</script>
+
+  
 </body>
 
 </html>
