Change Airbot loader script source to localhost

--- a/CDISCOUNT/index.html
+++ b/CDISCOUNT/index.html
@@ -13,7 +13,7 @@
   <script type="module" src="./src/main.jsx"></script>
 
 <script 
-  src="https://airslide.app/airbot/loader.js" 
+  src="http://localhost:3000/airbot/loader.js" 
   data-id="demo-site-001">
 </script>
 
