Replace SDK script with Airbot loader script

--- a/KIABI/index.html
+++ b/KIABI/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="./src/main.jsx"></script>
-  <script src="http://localhost:3000/sdk.js" data-id="4de5be1c-871b-472a-8a16-6d2ae4641474"></script>
+<script src="http://localhost:3001/airbot/loader.js" data-id="dfe842b1-3c3f-48cd-8b22-f04c75b3143f"></script>
 </body>
 
 </html>
