feat: add Booking.com clone, operational search, and fix portal links

--- a/CDISCOUNT/index.html
+++ b/CDISCOUNT/index.html
@@ -12,12 +12,10 @@
   <div id="root"></div>
   <script type="module" src="./src/main.jsx"></script>
 
-<script 
-  src="http://localhost:3000/airbot/loader.js" 
-  data-id="demo-site-001">
-</script>
+  <script src="http://localhost:3000/airbot/loader.js" data-id="demo-site-001">
+  </script>
 
-  
+
 </body>
 
 </html>
