--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
           <option value="/CDISCOUNT/index.html">CDISCOUNT</option>
           <option value="/BOULANGER/index.html">BOULANGER</option>
           <option value="/LA_HALLE/index.html">LA HALLE</option>
+          <option value="/BOOKING/index.html">BOOKING.COM</option>
           <option value="other">Prochainement...</option>
         </select>
         <div class="arrow">▼</div>
