Update script source URL in index.html

--- a/KIABI/index.html
+++ b/KIABI/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="./src/main.jsx"></script>
-  <script src="http://localhost:3000/airbot/loader.js" data-id="ad9e0071-fe6c-44b8-8a66-725a4fc68a8f"></script>
+  <script src="http://cgwwwcsgc84s8w40g40wcs08.161.97.183.28.sslip.io/airbot/loader.js" data-id="ad9e0071-fe6c-44b8-8a66-725a4fc68a8f"></script>
 </body>
 
 </html>
