--- a/KIABI/index.html
+++ b/KIABI/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="./src/main.jsx"></script>
-<script src="http://cgwwwcsgc84s8w40g40wcs08.161.97.183.28.sslip.io/airbot/loader.js" data-id="a5240476-091f-4f61-ba83-33c3316d3a2a"></script>
+<script src="https://beta.airbot.app/airbot/loader.js" data-id="a5240476-091f-4f61-ba83-33c3316d3a2a"></script>
 </body>
 
 </html>
